test/Debug/Errors/UndefinedWhile.k
// written by kimio kuramitsu
// The while statement is undefined by default.
// This tests error messages when the parser found
// an undefined statement.

while(true) {
	System.p("hello");
}
